@@ -1,3 +1,10 @@
+2007-09-08  Brandon Hale  <brandon@brandonhale.us>
+
+	* src/TrayIcon.cs, src/PlayerWindow.cs:
+	Patch from Lukaz on bug #466666. 
+	Support volume changing by moving the scroll wheel 
+	over the tray icon.
+
 2007-09-03  Ilkka Tuohela  <hile@iki.fi>
 
 	* configure.ac: Added fi to ALL_LINGUAS
